# job-application-assistant

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
data/: profile.example.yaml
src/job_assistant/: __init__.py  analyzer.py  cli.py  config.py  cv_generator.py  database.py  display.py  gemini_client.py  mail_watcher.py  matcher.py  models.py  profile.py  rr_client.py  scraper.py  vector_store.py
tests/: test_database.py  test_matcher.py  test_models.py  test_profile.py  test_scraper.py  test_vector_store.py
