[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-application-assistant"
version = "0.1.0"
description = "AI-powered CLI tool for job application analysis, profile matching, and semantic job search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
job-assistant = "job_assistant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/job_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
